--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -2,6 +2,8 @@
     margin: 0px;
     padding: 0px;
     }
+$azulcombina:  rgb(65, 114, 170);
+    $grisfondo: rgba(128, 128, 128, 0.414);
 
 #boton{
     margin: 20px;
@@ -23,7 +25,7 @@
 }
 
 #experienciaspasadas{
-    background-color: rgba(128, 128, 128, 0.414);
+    background-color: $grisfondo;
     padding: 2px;
 }
 #logo{ 
@@ -57,7 +59,7 @@
 }
 .borde{
    border-style: solid;
-   border-color: rgba(128, 128, 128, 0.178);
+   border-color: $grisfondo;
 
 }
 
@@ -90,7 +92,7 @@ body {
 }
 
 footer{
-    background-color: rgba(128, 128, 128, 0.414);
+    background-color: $grisfondo;
 }
 #contactanos{
     text-align: center;
@@ -171,7 +173,7 @@ section{
       font-size: 23px; 
 }
 #cuadro{
- background-color: #4a4e58;
+ background-color: $grisfondo
 }
 #logocuadro{
     width: 250px;
@@ -237,10 +239,9 @@ span{
     
 }
 .boton{
-    background-color: rgb(65, 114, 170);
-    color: #fff;
+    background-color: $azulcombina;
     border-radius: 30px;
-    border-color: rgb(65, 114, 170);
+    border-color: $azulcombina;
     transition: transform .2s; 
 }
 
